# mmore

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.arch  LICENSE  README.md  build.def  docling_benchmark.py  graphrag_requirements.txt  min_example.py  process_requirements.txt  pyproject.toml  pyrightconfig.colvision.json  pyrightconfig.json  pyrightconfig.tui.json  queryMilvusDB.py  rag_requirements.txt  requirements.txt  run_index.py  run_postprocess.py  run_process.py  run_rag.py  run_retriever.py  test_cherryPicking.py  test_qdrant_pipeline.py  test_rag.py  test_table_chunker.py
.github/: dependabot.yml
.github/pyright/: pyrightconfig.colvision.json
.github/workflows/: publish.yml  push-to-registry.yml  pyright.yml  ruff.yml  tests-gpu.yml  tests.yml
chitchat/: litlens-module.md  paper-discovery-module.md
config/: index.yaml  post_process.yaml  rag.yaml  sample.yaml
docker/arch/: Dockerfile  README.md
docker/cscs/: Dockerfile  README.md
docker/leap/: Dockerfile  README.md
docker/sles/: Dockerfile  README.md
docker/ubuntu/: Dockerfile  README.md
docs/: colpali.md  dashboard.md  dashboard_readme.md  distributed_processing.md  distributed_processing_readme.md  docker.md  evaluation.md  for_devs.md  index.md  index_api.md  installation.md  multimodal_rag.md  process.md  profiler.md  rag.md  rcp_and_production.md  retriever_api_specs.yaml  uv.md  websearch.md
docs/source/: conf.py  index.md
docs/source/advanced_usage/: cscs.md  distributed_processing.md  profiler.md  rcp_and_production.md
docs/source/core_features/: colpali.md  colvision.md  evaluation.md  llm_as_a_judge.md  paper_discovery.md  privacy_mode.md  websearch.md
docs/source/developer_documentation/: for_devs.md  index_api.md  retriever_api_specs.yaml
docs/source/getting_started/: architecture.md  indexing.md  installation.md  multimodal_rag.md  process.md  quickstart.md  rag.md  windows.md
examples/: config.yaml  process_config.yaml
examples/cc/: process_config.yaml
examples/colpali/: config_index.yml  config_process.yml  config_retrieval.yml
examples/colvision/: config_process.yml  config_retrieval.yml
examples/example_outputs/merged/: merged_results.jsonl
examples/example_outputs_ner/merged/: merged_results.jsonl
examples/example_outputs_ner/pp/: 1___🌍 Language ID.jsonl
examples/index/: config.yaml  indexer_config.yaml  indexer_example.yaml
examples/index/bge/: config.yaml  indexer_bge.yaml
examples/index/graphrag/: config.yaml
examples/index/llamavision/: config.yaml
examples/index/llava/: config.yaml
examples/index/openai/: config.yaml  indexer_openai.yaml  ner.db
examples/index/qwen/: config.yaml  ner.db
examples/paper_discovery/: categories.yaml  config.yaml  papers.samples.jsonl  synonyms.json  synonyms.jsonl
examples/postprocessor/: config.yaml  pp_config.yaml
examples/pp/: pp_config.yaml
examples/process/: config.yaml
examples/pubmedqa/: index_bge.yaml  index_stella.yaml  pp.yaml
examples/rag/: config.yaml  config_api.yaml  config_judge.yaml  guidelines.json  icd11_queries.jsonl  output.json  output.jsonl  privacy.yaml  queries.jsonl  questions.jsonl  rag_config_api.yaml  rag_config_local.yaml  rag_example.py  rag_example.yaml  retriever_example.py
examples/rag/api/: rag_api.yaml
examples/rag/evaluation/: README.md  indexer_eval_example_config.yaml  rag_eval_example.yaml  rag_eval_example_config.yaml  rag_evaluated_example_config.yaml  rag_evaluator_example.py  simple_rag_evaluation_config.yaml  unified_rag_evaluation_config.yaml
examples/rag/openai/: output.jsonl  rag_openai.yaml
examples/retriever_api/: config.yaml
examples/websearch/: config.yaml  enhanced_results_trial.json
examples/websearchRAG/: config.yaml  config_api.yaml  enhanced_results_trial.json
examples/who/: scott_ds_meditron70b_bge.jsonl  scott_ds_meditron70b_medembed.jsonl  scott_ds_meditron8b_bge.jsonl  scott_ds_meditron8b_bge_1.jsonl  scott_ds_openai_medembed.jsonl  scott_ds_openai_medembed_1.jsonl  scott_ds_queries.jsonl  scott_gpt4o_bge.yaml  scott_meditron70b_bge.yaml  scott_meditron70b_bge_1.yaml  scott_meditron70b_medembed.yaml  scott_meditron8b_bge.yaml  scottcorr_ds_meditron70b_bge.jsonl  scottcorr_ds_meditron8b_bge.jsonl  scottcorr_ds_queries.jsonl
production-config/index/: config.yaml
production-config/postprocessor/: config.yaml
production-config/process/: config.yaml
production-config/rag/: config.yaml  config_api.yaml  queries.jsonl
production-config/retriever_api/: config.yaml
results/: example.jsonl
scripts/: bench_omnidocbench.py  data_extractor.py  lm_eval_rag.sh  process_distributed.sh  setup.sh
scripts/cscs/: bench_omnidocbench.sbatch  mmore-vlm.toml
scripts/runai/: entrypoint.sh
src/: profiler.py
src/mmore/: RagCLIConfig.yaml  __init__.py  __main__.py  cli.py  job_queue.py  profiler.py  ragcli.py  ragcli_console.py  ragcli_helper.py  run_dashboard_backend.py  run_evaluation.py  run_index.py  run_index_api.py  run_live_retrieval.py  run_paper_discovery.py  run_postprocess.py  run_process.py  run_rag.py  run_ragcli.py  run_retriever.py  run_websearch.py  type.py  utils.py  ux.py
src/mmore/privacy/: risk.py  (+13 more)
test_data/docx/: ums.docx
test_data/folder/: test.txt
test_data/txt/: test.txt
tests/: conftest.py  test_change_detection_postprocess.py  test_change_detection_process.py  test_colpali.py  test_colvision.py  test_detection.py  test_full_pipeline_gpu.py  test_gpu_smoke.py  test_indexer.py  test_job_queue.py  test_judge.py  test_live_retriever_api.py  test_llm_config.py  test_model_registry.py  test_multimodal.py  test_multimodal_core.py  test_multimodal_generation.py  test_multimodal_rag.py  test_multimodal_retriever_indexer.py  test_paper_discovery.py  test_paragraph_extraction.py  test_postProcessors.py  test_postprocessors.py  test_previous_results.py  test_privacy.py  test_processors_local.py  test_profiler.py  test_rag.py  test_rag_api.py  test_ragcli.py  test_retriever.py  test_retriever_api.py  test_temp_files.py  test_websearch_pipeline.py
tests/privacy/: test_integration.py
(+326 files in other folders)
