[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mmore"
version = "1.0.0"
description = "mmore: Scalable multimodal document extraction pipeline for custom RAG integration."
readme = "README.md"
authors = [
    { name = "Alexandre Sallinen", email = "alexandre.sallinen@epfl.ch" },
    { name = "Paul Teiletche", email = "paul.teiletche@epfl.ch" },
    { name = "Marc-Antoine Allard", email = "marc-antoine.allard@epfl.ch" },
    { name = "Stefan Krsteski", email = "stefan.krsteski@epfl.ch" },
    { name = "David Kalajdzic", email = "david.kalajdzic@epfl.ch" },
    { name = "Michael Zhang", email = "michael.zhang@epfl.ch" },
    { name = "Matthias Meyer", email = "matthias.meyer@sdsc.ethz.ch" },
    { name = "Fabrice Nemo", email = "fabrice.nemo@epfl.ch" },
    { name = "Charlotte Meyer", email = "Charlotte.meyer@epfl.ch" },
    { name = "Grieder Lea", email = "lea.grieder@epfl.ch" },
    { name = "Matthew Meyer", email = "matthew.meyer@epfl.ch" },
    { name = "Achille Triomphe", email = "achille.triomphe@epfl.ch" }

]
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.3",
    "pandas==2.2.3",
    "datasets==2.19.1",
    "transformers==4.52",
    "fastapi[standard]",
    "fastapi==0.115.5",
    "fasteners==0.19",
    "uvicorn==0.32.1",
    "python-dotenv==1.0.1",
    "dacite==1.8.1",
    "click>=8.1.7",
    "dask[distributed]>=2025.2.0",
    "pytest>=8.3.4",
    "validators==0.34.0",
    "httpx==0.27.2",
    "Pillow",
    "PyMuPDF",
    "beautifulsoup4==4.13.4",
    "Unidecode",
    "clean-text",
    "docx2pdf",
    "lxml_html_clean",
    "python-docx",
    "python-pptx",
    "clean-text",
    "requests==2.32.3",
    "selenium==4.27.1",
    "surya-ocr>=0.8.3",
    "xlrd==2.0.1",
    "py7zr==0.22.0",
    "rarfile==4.2",
    "markdown==3.7",
    "markdownify==0.13.1",
    "marker-pdf==1.6.0",
    "moviepy==2.1.1",
    "openpyxl==3.1.5",
    "chonkie==0.2.1.post1",
    "langdetect>=1.0.9",
    "trafilatura==1.4.0",
    "datatrove==0.3.0",
    "validators==0.34.0",
    "bokeh",
    "motor==3.6.0",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "fastapi[standard]",
    "fastapi==0.115.5",
    "pydantic==2.10.4",
    "pymongo==4.9.2",
    "pymilvus==2.5.0",
    "milvus-model==0.2.12",
    "accelerate==1.6.0",
    "langchain-anthropic==0.3.4",
    "langchain-aws==0.2.22",
    "langchain-cohere==0.4.2",
    "langchain-huggingface==0.1.2",
    "langchain-milvus==0.1.8",
    "langchain-mistralai==0.2.7",
    "langchain-nvidia-ai-endpoints",
    "langchain-openai==0.3.7",
    "langchain==0.3.20",
    "langserve[all]==0.3.1",
    "ragas==0.2.6",
    "nltk>=3.9",
    "starlette==0.41.3",
    "typing_extensions==4.12.2",
    "sympy==1.14.0"
]

[project.optional-dependencies]
cpu = [
    "torch>=2.5.1",
]
cu124 = [
    "torch>=2.5.1",
]

rag = [
  "accelerate",
  "langchain-anthropic==0.3.4",
  "langchain-aws",
  "langchain-cohere==0.4.2",
  "langchain-huggingface==0.1.2",
  "langchain-milvus==0.1.8",
  "langchain-mistralai==0.2.7",
  "langchain-nvidia-ai-endpoints",
  "langchain-openai==0.3.7",
  "langchain==0.3.20",
  "langdetect>=1.0.9",
  "langserve[all]==0.3.1",
  "pymilvus==2.5.0",
  "milvus-model==0.2.12",
  "ragas==0.2.6",
  "nltk>=3.9",
]

dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu", marker = "platform_system != 'Darwin'" },
  { index = "pytorch-cu124", extra="cu124", marker = "platform_machine != 'aarch64'"},
  # { url = "https://download.pytorch.org/whl/cu124/torch-2.5.1-cp311-cp311-linux_aarch64.whl", extra="cu124",  marker = "platform_machine == 'aarch64'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.isort]
profile = "black"

[project.scripts]
mmore = "mmore.cli:main"

[tool.pytest.ini_options]
filterwarnings = ["ignore::Warning"]
testpaths = ["tests"]

[tool.ruff]
exclude = ["src/mmore/run_retriever.py"]    # TODO: add back when GH CI bug is fixed

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]   # Avoid enforcing line-length violations (`E501`)

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"run_index_api.py" = ["N803", "N806"]