[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mmore"
version = "1.1.1"
description = "mmore: Scalable multimodal document extraction pipeline for custom RAG integration."
readme = "README.md"
authors = [
    { name = "Alexandre Sallinen", email = "alexandre.sallinen@epfl.ch" },
    { name = "Paul Teiletche", email = "paul.teiletche@epfl.ch" },
    { name = "Marc-Antoine Allard", email = "marc-antoine.allard@epfl.ch" },
    { name = "Stefan Krsteski", email = "stefan.krsteski@epfl.ch" },
    { name = "David Kalajdzic", email = "david.kalajdzic@epfl.ch" },
    { name = "Michael Zhang", email = "michael.zhang@epfl.ch" },
    { name = "Matthias Meyer", email = "matthias.meyer@sdsc.ethz.ch" },
    { name = "Fabrice Nemo", email = "fabrice.nemo@epfl.ch" },
    { name = "Charlotte Meyer", email = "charlotte.meyer@epfl.ch" },
    { name = "Grieder Lea", email = "lea.grieder@epfl.ch" },
    { name = "Matthew Meyer", email = "matthew.meyer@epfl.ch" },
    { name = "Achille Triomphe", email = "achille.triomphe@epfl.ch" },
    { name = "Victor Zablocki", email = "victor.zablocki@epfl.ch" },
    { name = "Adam Chahed Ouazzani", email = "adam.chahedouazzani@epfl.ch" }

]
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4; python_version < '3.12'",
    "numpy==2.3.2; python_version >= '3.12'",
    "pandas==2.3.0",
    "datasets==4.0.0",
    "transformers==4.53.3",
    "fasteners==0.19",
    "uvicorn==0.34.3",
    "python-dotenv==1.0.1",
    "dacite==1.9.2",
    "click>=8.1.7",
    "dask[distributed]>=2025.2.0",
    "pytest>=8.3.4",
    "httpx==0.28.1",
    "Pillow",
    "PyMuPDF",
    "beautifulsoup4==4.13.4",
    "Unidecode",
    "clean-text",
    "docx2pdf",
    "lxml_html_clean",
    "python-docx",
    "python-pptx",
    "clean-text",
    "requests==2.32.5",
    "selenium==4.39.0",
    "surya-ocr>=0.8.3",
    "xlrd==2.0.1",
    "py7zr==1.0.0",
    "rarfile==4.2",
    "markdown==3.7",
    "markdownify==0.13.1",
    "marker-pdf==1.7.5",
    "moviepy==2.1.1",
    "openpyxl==3.1.5",
    "chonkie==0.2.1.post1",
    "langdetect>=1.0.9",
    "trafilatura==2.0.0",
    "datatrove==0.3.0; python_version < '3.12'",
    "datatrove==0.6.0; python_version >= '3.12'",
    "validators==0.35.0",
    "bokeh",
    "motor==3.7.1",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "fastapi[standard]",
    "fastapi==0.125.0",
    "pydantic==2.11.7",
    "pymongo==4.13.2",
    "pymilvus==2.6.3",
    "pymilvus[milvus-lite]==2.6.3",
    "pymilvus.model==0.3.2",
    "milvus-model==0.2.12",
    "accelerate==1.7.0",
    "cohere==5.20.0",
    "langchain==1.1.0",
    "langchain-anthropic==1.2.0",
    "langchain-aws==1.1.0",
    "langchain-cohere==0.5.0",
    "langchain-community==0.4.1",
    "langchain-huggingface==1.1.0",
    "langchain-milvus==0.3.1",
    "langchain-mistralai==1.1.0",
    "langchain-openai==1.1.0",
    "ragas==0.4.1",
    "nltk>=3.9",
    "starlette==0.50.0",
    "typing_extensions>=4.15.0,<5.0",
    "sympy>=1.13.1",
    "google-auth==2.39.0",
    "google-api-python-client==2.173.0",
    "mammoth==1.9.0",
    "argostranslate",
    "sentence-transformers",
    "langid",
    "colpali-engine==0.3.13"
]

[project.optional-dependencies]
cpu = [
    "torch>=2.7.0",
]
cu126 = [
    "torch>=2.7.0",
]

rag = [
  "accelerate",
  "cohere==5.20.0",
  "langchain==1.1.0",
  "langchain-anthropic==1.2.0",
  "langchain-aws==1.1.0",
  "langchain-cohere==0.5.0",
  "langchain-community==0.4.1",
  "langchain-huggingface==1.1.0",
  "langchain-milvus==0.3.1",
  "langchain-mistralai==1.1.0",
  "langchain-openai==1.1.0",
  "langdetect>=1.0.9",
  "pymilvus==2.6.3",
  "pymilvus[milvus-lite]==2.6.3",
  "pymilvus.model==0.3.2",
  "milvus-model==0.2.12",
  "ragas==0.4.1",
  "nltk>=3.9",
]

dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu126" },
  ],
]

override-dependencies = ["anthropic==0.73.0"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu", marker = "platform_system != 'Darwin'" },
  { index = "pytorch-cu126", extra="cu126", marker = "platform_machine != 'aarch64'"},
  # { url = "https://download.pytorch.org/whl/cu126/torch-2.5.1-cp311-cp311-linux_aarch64.whl", extra="cu126",  marker = "platform_machine == 'aarch64'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[project.scripts]
mmore = "mmore.cli:main"

[tool.setuptools]
packages = ["mmore"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
filterwarnings = ["ignore::Warning"]
testpaths = ["tests"]

[tool.ruff]
exclude = ["src/mmore/run_retriever.py"]    # TODO: add back when GH CI bug is fixed

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
fixable = ["ALL"]
ignore = ["E501", "E402"]   # Avoid enforcing line-length violations (`E501`) and Module level import not at top of file (`E402`)

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"run_index_api.py" = ["N803", "N806"]

[tool.codespell]
ignore-words-list = "ore,revered"
skip = "./examples/*,*.pdf"
